--- a/styles/home.css
+++ b/styles/home.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  background: url(./imgs/header-hero.jpg);
+  background: url(/imgs/header-hero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
