--- a/styles/services.css
+++ b/styles/services.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  background: url(./imgs/services-hero.jpg);
+  background: url(/imgs/services-hero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
